crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__strict_order.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons (trace "head" in 42) (trace "tail" in (con (list integer) [7])) of
  Nil -> trace "cold" in error
  Cons ignored#2 ignored#3 -> trace "body" in 21
--- unoptimized UPLC
(program 1.1.0
  (case
    [[(force (builtin mkCons))
      (force [[(force (builtin trace)) (con string "head")] (delay (con integer 42))])]
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])]
    (lam ignored_2
      (lam ignored_3
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- optimized Core
let anf#5 : int = trace "head" in 42 in
let anf#6 : list int = trace "tail" in (con (list integer) [7]) in
let anf#7 : list int = mkCons anf#5 anf#6 in
trace "body" in 21
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam builtin_5
      [(lam anf_1
        [(lam anf_2
          [(lam anf_3 (force [[builtin_4 (con string "body")] (delay (con integer 21))]))
            [[builtin_5 anf_1] anf_2]])
          (force [[builtin_4 (con string "tail")] (delay (con (list integer) [7]))])])
        (force [[builtin_4 (con string "head")] (delay (con integer 42))])])
      (force (builtin mkCons))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#4 : int = trace "head" in 42 in
let anf#5 : list int = trace "tail" in (con (list integer) [7]) in
let anf#6 : list int = mkCons anf#4 anf#5 in
case@List anf#6 of
  Nil -> trace "cold" in error
  Cons ignored#2 ignored#3 -> trace "body" in 21
--- isolated folded Core
let anf#4 : int = trace "head" in 42 in
let anf#5 : list int = trace "tail" in (con (list integer) [7]) in
let anf#6 : list int = mkCons anf#4 anf#5 in
let ignored#2 : int = anf#4 in
let ignored#3 : list int = anf#5 in
trace "body" in 21
--- isolated cleaned Core
let anf#4 : int = trace "head" in 42 in
let anf#5 : list int = trace "tail" in (con (list integer) [7]) in
let anf#6 : list int = mkCons anf#4 anf#5 in
trace "body" in 21
--- isolated UPLC before
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      [(lam anf_6
        (case
          anf_6
          (lam ignored_2
            (lam ignored_3
              (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
          (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
        [[(force (builtin mkCons)) anf_4] anf_5]])
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con integer 42))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_4
    [(lam anf_5
      [(lam anf_6
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))
        [[(force (builtin mkCons)) anf_4] anf_5]])
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con integer 42))])])
--- result
(con integer 21)
--- logs
["head", "tail", "body"]
