crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__unknown_traced_subject.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List (trace "subject" in (con (list integer) [])) of
  Nil -> 42
--- unoptimized UPLC
(program 1.1.0
  (case
    (force
      [[(force (builtin trace)) (con string "subject")]
        (delay (con (list integer) []))])
    (lam generated_2 (lam generated_1 (error)))
    (con integer 42)))
--- optimized Core
let anf#1 : list int = trace "subject" in (con (list integer) []) in
case@List anf#1 of
  Nil -> 42
--- optimized UPLC
(program 1.1.0
  [(lam builtin_5
    [(lam anf_2
      (case anf_2 (lam generated_4 (lam generated_3 (error))) (con integer 42)))
      (force [[builtin_5 (con string "subject")] (delay (con (list integer) []))])])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#1 : list int = trace "subject" in (con (list integer) []) in
case@List anf#1 of
  Nil -> 42
--- isolated folded Core
let anf#1 : list int = trace "subject" in (con (list integer) []) in
case@List anf#1 of
  Nil -> 42
--- isolated cleaned Core
let anf#1 : list int = trace "subject" in (con (list integer) []) in
case@List anf#1 of
  Nil -> 42
--- isolated UPLC before
(program 1.1.0
  [(lam anf_1
    (case anf_1 (lam generated_3 (lam generated_2 (error))) (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "subject")]
        (delay (con (list integer) []))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_1
    (case anf_1 (lam generated_3 (lam generated_2 (error))) (con integer 42)))
    (force
      [[(force (builtin trace)) (con string "subject")]
        (delay (con (list integer) []))])])
--- result
(con integer 42)
--- logs
["subject"]
