crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__wrong_head_type.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons (trace "head" in true) (trace "tail" in (con (list integer) [7])) of
  Nil -> trace "cold" in error
  Cons ignored#26 ignored#27 -> trace "body" in 21
--- unoptimized UPLC
(program 1.1.0
  (case
    [[(force (builtin mkCons))
      (force [[(force (builtin trace)) (con string "head")] (delay (con bool True))])]
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])]
    (lam ignored_26
      (lam ignored_27
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- optimized Core
let anf#3 : bool = trace "head" in true in
let anf#4 : list int = trace "tail" in (con (list integer) [7]) in
let anf#5 : list int = mkCons anf#3 anf#4 in
trace "body" in 21
--- optimized UPLC
(program 1.1.0
  [(lam builtin_7
    [(lam builtin_8
      [(lam anf_1
        [(lam anf_2
          [(lam anf_6 (force [[builtin_7 (con string "body")] (delay (con integer 21))]))
            [[builtin_8 anf_1] anf_2]])
          (force [[builtin_7 (con string "tail")] (delay (con (list integer) [7]))])])
        (force [[builtin_7 (con string "head")] (delay (con bool True))])])
      (force (builtin mkCons))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#28 : bool = trace "head" in true in
let anf#29 : list int = trace "tail" in (con (list integer) [7]) in
let anf#30 : list int = mkCons anf#28 anf#29 in
case@List anf#30 of
  Nil -> trace "cold" in error
  Cons ignored#26 ignored#27 -> trace "body" in 21
--- isolated folded Core
let anf#28 : bool = trace "head" in true in
let anf#29 : list int = trace "tail" in (con (list integer) [7]) in
let anf#30 : list int = mkCons anf#28 anf#29 in
let ignored#26 : int = anf#28 in
let ignored#27 : list int = anf#29 in
trace "body" in 21
--- isolated cleaned Core
let anf#28 : bool = trace "head" in true in
let anf#29 : list int = trace "tail" in (con (list integer) [7]) in
let anf#30 : list int = mkCons anf#28 anf#29 in
trace "body" in 21
--- isolated UPLC before
(program 1.1.0
  [(lam anf_28
    [(lam anf_29
      [(lam anf_30
        (case
          anf_30
          (lam ignored_26
            (lam ignored_27
              (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
          (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
        [[(force (builtin mkCons)) anf_28] anf_29]])
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con bool True))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_28
    [(lam anf_29
      [(lam anf_30
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))
        [[(force (builtin mkCons)) anf_28] anf_29]])
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
    (force [[(force (builtin trace)) (con string "head")] (delay (con bool True))])])
--- result
error: Runtime(MkConsTypeMismatch(Boolean(true)))
--- logs
["head", "tail"]
